--- a/backend-dhando/package.json
+++ b/backend-dhando/package.json
@@ -27,6 +27,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.175",
     "@types/morgan": "^1.9.3",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
@@ -34,11 +35,15 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.12.2",
+    "fp-ts": "^2.11.4",
+    "io-ts": "^2.2.16",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
+    "ts-transformer-keys": "^0.4.3",
     "winston": "^3.3.3"
   }
 }
