--- a/backend-dhando/package.json
+++ b/backend-dhando/package.json
@@ -27,8 +27,10 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.175",
     "@types/morgan": "^1.9.3",
+    "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "chai-http": "^4.3.0",
@@ -40,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.5",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
